<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/business"
                android:padding="6dp"
                android:id="@+id/btn_1"
                android:layout_margin="6dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/entertainment"
                android:padding="6dp"
                android:id="@+id/btn_2"
                android:layout_margin="6dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/general"
                android:padding="6dp"
                android:id="@+id/btn_3"
                android:layout_margin="6dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/science"
                android:padding="6dp"
                android:id="@+id/btn_4"
                android:layout_margin="6dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/sports"
                android:padding="6dp"
                android:id="@+id/btn_5"
                android:layout_margin="6dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/technology"
                android:padding="6dp"
                android:id="@+id/btn_6"
                android:layout_margin="6dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/health"
                android:padding="6dp"
                android:id="@+id/btn_7"
                android:layout_margin="6dp"/>

        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycler_main"
        android:layout_margin="8dp"/>

</LinearLayout>